# rocm-build

./: .gitignore  00.rocm-core.sh  11.llvm-amdgpu.sh  11.rocm-llvm.sh  12.roct-thunk-interface.sh  13.rocm-cmake.sh  14.rocm-device-libs.sh  15.rocr-runtime.sh  16.rocminfo.sh  17.1.hipcc.sh  17.rocm-compilersupport.sh  18.hip.sh  18.rocclr.sh  19.hip.sh  19.hipify.sh  21.rocfft.sh  22.rocblas.sh  23.rocprim.sh  24.rocrand.sh  25.rocsparse.sh  26.hipsparse.sh  27.rccl.sh  27.rocm_smi_lib.sh  28.hipfft.sh  28.rccl.sh  29.hipfft.sh  31.rocm-opencl-runtime.sh  32.clang-ocl.sh  33.rocprofiler.sh  33.roctracer.sh  34.half.sh  34.miopen.sh  34.rocm-utils.sh  34.roctracer.sh  35.half.sh  35.miopen.sh  35.rocm-utils.sh  36.miopengemm.sh  36.rocm-utils.sh  37.rocm-utils.sh  (+36 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
3.8.0/: 11.roct-thunk-interface.sh  12.llvm-amdgpu.sh  13.rocm-device-libs.sh  14.rocr-runtime.sh  15.rocminfo.sh  16.rocm-compilersuport.sh  17.rocclr.sh  18.hip.sh  19.hip.sh  21.rocm-cmake.sh  21.rocm-opencl-runtime.sh  22.clang-ocl.sh  22.rocblas.sh  22.rocm-opencl-runtime.sh  23.clang-ocl.sh  24.rocrand.sh  25.rocsparse.sh  32.rocdbgapi.sh  33.rocr_debug_agent.sh  34.rocgdb.sh  34.rocm-utils.sh  35.miopen.sh  35.roc-smi.sh  36.rocm_smi_lib.sh  37.rocprofiler.sh  37.roctracer.sh  38.rocprofiler.sh  38.roctracer.sh  39.hipify.sh  40.rocm_bandwidth_test.sh  41.meta.sh  43.rocr_debug_agent.sh  48.meta.sh  51.rocblas.sh  52.rocprim.sh  53.hipblas.sh  53.rocsparse.sh  54.hipsparse.sh  54.rocalution.sh  55.hipcub.sh  (+13 more)
check/: README.md  README_zh_CN.md  check.sh  hello_rocrand.cpp  run-hip.sh  run-miopen-img.sh  run-miopen.sh  run-opencl.sh  run-rocblas.sh  run-rocblas2.sh  run-rocblas3.sh  run-rocblas4.sh  run-rocfft.sh  run-rocrand.sh  run-rocsparse.sh  test-pytorch-fc.py  test-pytorch-rocblas.py  test_rocblas.cpp
docs/: gfx803.md  gfx803_zh_CN.md
gfx803/: 21.rocfft.sh  22.rocblas.sh  34.miopen.sh  README.md  README_zh_CN.md  test-pytorch-rocblas.py  test.sh
local/: 12.roct-thunk-interface.sh  22.rocblas.sh  34.miopen.sh  35.miopen.sh  36.miopen.sh  37.miopen.sh  61.amdmigraphx.sh  62.amdmigraphx.sh  68.amdmigraphx.sh  all.sh  create-repo-ubuntu2204.sh  miopen-mlir.sh  patch-ubuntu2204.sh  prepare-all.sh  prepare-boost.sh  prepare-cmake.sh  prepare-fmt.sh  prepare-googletest.sh  prepare-json.sh  prepare-yaml.sh
navi10/: 22.rocblas.sh  25.rocsparse.patch  25.rocsparse.sh  README.md  README_zh_CN.md  tensile-0.patch  tensile-1.patch  tensile.patch
navi12/: 22.rocblas.sh  25.rocsparse.sh  README.md
navi14/: 22.rocblas.sh  25.rocsparse.sh  README.md  README_zh_CN.md  tensile.patch
navi21/: 22.rocblas.sh  (+4 more)
src/rocm-core/: CMakeLists.txt
src/rocm-core/include/: rocm_version.h  rocm_version.h.in
src/rocm-libs/: CMakeLists.txt
(+202 files in other folders)
